src/objects/ffbc__Discount__c.object
<CustomObject>
    <customHelpPage>ffbc__discounthelp</customHelpPage>
    <description>Contains the discounts that you can apply to Billing Central contracts.</description>
    <fields>
        <fullName>ffbc__Amount__c</fullName>
        <description>Fixed value discount to be applied. Enter a Percentage or an Amount.</description>
        <inlineHelpText>Fixed value discount to be applied. Enter a Percentage or an Amount.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__Description__c</fullName>
        <description>Description of the discount.</description>
        <inlineHelpText>Description of the discount.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__Percentage__c</fullName>
        <description>Percentage discount to be applied. Enter a Percentage or an Amount.</description>
        <inlineHelpText>Percentage discount to be applied. Enter a Percentage or an Amount.</inlineHelpText>
        <label>Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Discount</label>
    <listViews>
        <fullName>ffbc__All</fullName>
        <columns>NAME</columns>
        <columns>ffbc__Percentage__c</columns>
        <columns>ffbc__Amount__c</columns>
        <columns>ffbc__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>